--- a/sybi_general.css
+++ b/sybi_general.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(48, 48, 150);
     margin: 0px;
@@ -19,7 +19,7 @@ a {
     float: left;
     padding: 60px;
     font-size: x-large;
-    color:white;
+    color: white;
     text-align: center;
     border: none;
 }
@@ -28,6 +28,7 @@ a {
     text-decoration: underline;
     cursor: pointer;
 }
+
 .right {
     float: right;
     margin-left: 450%;
@@ -37,29 +38,88 @@ a {
 
 
 
-.topnav .idl_sand /*Anakin be like (amúgy sandwitch menü) */ {
+.topnav .idl_sand
+
+/*Anakin be like (amúgy sandwitch menü) */
+    {
     display: none;
 }
 
 /*Reszponzííív navi (mert vicci-vicci és mert tudom hogy fel fogom húzni magam rajta )*/
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
     .topnav a.idl_sand {
         display: block;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .topnav.resp {position: relative;}
-    .topnav.resp .idl_sand {
-      position: absolute;
-      right: 0;
-      top: 0;
+    .topnav.resp {
+        position: relative;
     }
+
+    .topnav.resp .idl_sand {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
     .topnav.resp a {
-      float: none;
-      display: block;
-      text-align: center;
+        float: none;
+        display: block;
+        text-align: center;
     }
 }
 
+/*Dropdown*/
+.dropbtn {
+    background-color: rgb(7, 7, 80);
+    color: white;
+    cursor: pointer;
+    transition-duration: 0.4s ease;
+    font-size: x-large;
+    font-variant: small-caps;
+    border: none;
+    padding: 60px;
+
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-romane-conti {
+    display: none;
+    left: 0;
+    position: absolute;
+    background-color: rgb(7, 7, 80);
+    min-width: auto;
+    cursor: pointer;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-romane-conti a {
+    color: white;
+    padding: 40px 50px;
+    display: block;
+    transition-duration: 0.4s ease;
+    text-align: center;
+    font-size: large;
+}
+
+.dropdown-romane-conti a:hover {
+    background-color: rgb(11, 11, 105);
+}
+
+.dropdown:hover .dropdown-romane-conti {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    text-decoration: underline;
+}
