--- a/sybi_general.css
+++ b/sybi_general.css
@@ -123,3 +123,17 @@ a {
 .dropdown:hover .dropbtn {
     text-decoration: underline;
 }
+
+
+
+/*Lol be like hee hee*/
+.lolcím{
+font-size: 40px;
+text-align: center; 
+}
+
+.lol-közép{
+    display: grid;
+    place-items: center;
+    text-align: center;
+}
