--- a/sybi_general.css
+++ b/sybi_general.css
@@ -137,3 +137,7 @@ text-align: center;
     place-items: center;
     text-align: center;
 }
+.lol-body-div{
+    margin: 10px;
+    padding: 30px;
+}
