--- a/sybi_general.css
+++ b/sybi_general.css
@@ -1,13 +1,3 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(48, 48, 150);
-    margin: 0px;
-}
-
-a {
-    text-decoration: none;
-}
-
 /*Navbar*/
 
 .topnav {
@@ -22,11 +12,15 @@ a {
     color: white;
     text-align: center;
     border: none;
+    text-decoration: none;
 }
 
 .topnav a:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+.topnav .active {
+    text-decoration: underline;
 }
 
 .right {
