--- a/minenhandwerk.css
+++ b/minenhandwerk.css
@@ -2,9 +2,22 @@ th{
     text-align: center;
     padding: 10px;
     background-color: gray;
+    border: 1px black solid;
 }
 
 td{
     padding: 10px;
+    text-align: center;
+    border: 1px black solid;
+}
+
+table{
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    border: 2px black solid;
+}
+
+h2{
     text-align: center;
 }
