--- a/minenhandwerk.css
+++ b/minenhandwerk.css
@@ -21,3 +21,10 @@ table{
 h2{
     text-align: center;
 }
+
+img{
+    border-radius: 20px;
+    width: 600px;
+    height: 300px;
+    border: solid 2px black;
+}
