--- a/sybi_general.css
+++ b/sybi_general.css
@@ -118,6 +118,45 @@
     text-decoration: underline;
 }
 
+.cont {
+    position: relative;
+    width: 50%;
+}
+
+.linkpic {
+    display: block;
+    width: 400px;
+    height:auto;
+}
+
+.overlayer_text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+.overlayer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #272a2b;
+}
+
+.cont:hover .overlayer {
+    opacity: 8;
+}
 
 
 /*Lol be like hee hee*/
