--- a/sybi_general.css
+++ b/sybi_general.css
@@ -25,9 +25,10 @@
 
 .right {
     float: right;
-    margin-left: 450%;
+    margin-left: 400%;
     width: 200px;
     height: auto;
+    position: relative;
 }
 
 
@@ -123,23 +124,24 @@
     border: none;
     padding: none;
     margin: none;
+    overflow: hidden;
 }
 
 .linkpic {
     display: block;
-    overflow: none;
-    width: 970px;
-    height: 600px;
+    overflow: hidden;
+    width: 700px;
+    height: 550px;
 }
 
 .tag {
     width: 2000px;
     height: auto;
+    display: block;
+    overflow: hidden;
     @media  screen and (max-width: 720px){
-        display: block;
-        overflow: none;
         width: 970px;
-        height: 600px;
+        height: 550px;
     }
 }
 
@@ -148,7 +150,7 @@
     font-size: xx-large;
     position: absolute;
     text-align: center;
-    top: 50%;
+    top: 42%;
     left: 25%;
     right: 25%;
   }
@@ -158,7 +160,7 @@
     font-size: medium;
     position: absolute;
     text-align: center;
-    top: 58%;
+    top: 50%;
     left: 25%;
     right: 25%;
 }
@@ -167,7 +169,6 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 12px;
     right: 0;
     height: 100%;
     width: 100%;
@@ -178,6 +179,17 @@
 
 .cont:hover .overlayer {
     opacity: 1;
+    transform: scale(1.2);
+    overflow: hidden;
+}
+.cont:hover .linkpic{
+    transform: scale(1.2) ;
+    overflow: hidden;
+}
+
+.cont:hover .tag {
+    transform: scale(1.2);
+    overflow: hidden;
 }
 
 .black {
