--- a/sybi_general.css
+++ b/sybi_general.css
@@ -31,39 +31,6 @@
     position: relative;
 }
 
-.topnav .idl_sand {
-    display: none;
-}
-
-/*Reszponzííív navi (mert vicci-vicci és mert tudom hogy fel fogom húzni magam rajta )*/
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-
-    .topnav a.idl_sand {
-        display: block;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .topnav.resp {
-        position: relative;
-    }
-
-    .topnav.resp .idl_sand {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav.resp a {
-        float: none;
-        display: block;
-        text-align: center;
-    }
-}
-
 /*Dropdown*/
 .dropbtn {
     background-color: rgb(7, 7, 80);
@@ -126,7 +93,8 @@
     display: block;
     overflow: hidden;
     width: 700px;
-    height: 520px;
+    height: 500px;
+    scale: 1.05;
 }
 
 .tag {
@@ -134,9 +102,9 @@
     height: auto;
     display: block;
     overflow: hidden;
-    @media  screen and (max-width: 720px){
-        width: 970px;
-        height: 520px;
+    @media  screen and (max-width: 800px){
+        
+        height: auto;
         display: block;
         overflow: hidden;
     }
