--- a/grand.css
+++ b/grand.css
@@ -7,7 +7,7 @@ h1,h2{
     margin-bottom: 50px;
 }
 .Típusok{
-    border: 3px black;
+    border: 10px black;
     border-style: solid;
     background-color: rgb(51, 134, 230);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -19,16 +19,30 @@ td, th,tr{
     text-align: center;
 }
 p{
-    text-align: center;
+    text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
+    font-size: 18px;
+    margin-left: 200px;
+    margin-right: 200px;
+    padding: 25px;
 }
 .Megjelenések{
-    border: 3px black;
+    border: 8px black;
     border-style: solid;
     background-color: rgb(42, 216, 144);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 18px;
+    font-size: 20px;
+    background-image: url("../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/1.Table.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 90%;
+}
+
+table.Megjelenések{
+    height: 700px;
+    width: 80%;
+    color: white;
+    margin-left: 10%;   
 }
 .Verziók{
     border: 3px black;
@@ -45,7 +59,7 @@ p{
     font-size: 18px;
 }
 thead{
-    font-size: 18px;
+    font-size: 30px;
     font-weight: bolder;
 }
 h3{
