--- a/sybi_general.css
+++ b/sybi_general.css
@@ -13,6 +13,7 @@
     text-align: center;
     border: none;
     text-decoration: none;
+    
 }
 
 .topnav a:hover {
@@ -148,12 +149,14 @@
     overflow: hidden;
 }
 .cont:hover .linkpic{
-    transform: scale(1.2) ;
+    transform: scale(1.2);
+    transition-duration: 0.5s;
     overflow: hidden;
 }
 
 .cont:hover .tag {
     transform: scale(1.2);
+    transition-duration: 0.5s;
     overflow: hidden;
 }
 
