Szerelni próbálkozás és nem sikerrel járás

--- a/sybi_general.css
+++ b/sybi_general.css
@@ -232,7 +232,7 @@
 
 /*Minden más*/
 .bpic {
-    background-image: url(abus_linkpic4.jpg);
+    background-image: url(abus.jpg);
     color: white;
 }
 
