Javítgatások és egy kis tesztelés
Az Opera sötét mód kényszerítője adott egy ötletet, amit bekapcsoltam nálatok a body-ba írt bc osztállyal, ha nem tetszik vegyétek nyugodtan ki, szerintem viszont sokkal jobb mint volt.

--- a/sybi_general.css
+++ b/sybi_general.css
@@ -235,8 +235,8 @@
 }
 
 /*Minden más*/
-.bpic {
-    background-image: url(abus.jpg);
+.bc {
+    background-color: rgb(20, 20, 20);
     color: white;
 }
 
