Footbar és "Főni" jegyzetek
Megnéztem a kódjaitokat és ahol lehet úgy alakítottam a footbart és navit hogy ne ütközzön a cuccaitokkal.
Megjegyezném, hogyha olyanokat adtok meg a css-eitekben, hogy img, meg h1, meg table az mindenre kihatással van, jelen esetben pl a navira és a footerre. Ha valami nem mükszik ott keressétek a hibát.

--- a/minenhandwerk.css
+++ b/minenhandwerk.css
@@ -27,8 +27,9 @@ img{
     width: 600px;
     height: 300px;
     border: solid 2px black;
+    /*A naviban a képre ez is hat szóval pls csinálj belőle classt. Köcce*/
 }
 #body{
     margin-left: 5%;
-
+    /*Kicsit ferde így a dolog, hogy csak az egyik oldalon adtad meg. Persze ha ez szándékos akkor nem szóltam*/
 }
