--- a/sybi_general.css
+++ b/sybi_general.css
@@ -242,6 +242,25 @@
     color: white;
 }
 
+#topbtn {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 40px;
+    border: none;
+    outline: none;
+    background-color: rgb(7, 7, 80);
+    color: white;
+    padding:5px 25px;
+    border-radius: 60px;
+}
+
+#topbtn:hover {
+    background-color: rgb(11, 11, 105);
+    cursor: pointer;
+}
+
 /*Lol be like hee hee*/
 .lolcím{
 font-size: 40px;
