--- a/sybi_general.css
+++ b/sybi_general.css
@@ -260,6 +260,49 @@
     place-items: center;
     color: white;
 }
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+    border-radius: 8px;
+}
+  
+.flip-card-cont {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+  
+.flip-card:hover .flip-card-cont {
+    transform: rotateY(180deg);
+}
+  
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+  
+.flip-card-front {
+    background-color: rgb(7, 7, 80);
+    color: white;
+}
+  
+.flip-card-back {
+    background-color: rgb(7, 7, 80);
+    color: white;
+    transform: rotateY(180deg);
+}
+
+
 /*Minden más*/
 .bc {
     background-color: rgb(20, 20, 20);
