--- a/sybi_general.css
+++ b/sybi_general.css
@@ -283,7 +283,7 @@
     transform: rotateY(180deg);
 }
   
-.flip-card-front, .flip-card-back {
+.fc-front, .fc-back{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -291,12 +291,12 @@
     backface-visibility: hidden;
 }
   
-.flip-card-front {
+.fc-front {
     background-color: rgb(7, 7, 80);
     color: white;
 }
   
-.flip-card-back {
+.fc-back {
     background-color: rgb(7, 7, 80);
     color: white;
     transform: rotateY(180deg);
