--- a/sybi_general.css
+++ b/sybi_general.css
@@ -20,6 +20,7 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
 .topnav .active {
     text-decoration: underline;
 }
@@ -30,23 +31,25 @@
     align-items: center;
     width: 80%;
 }
+
 .cent {
     width: 30%;
 }
 
 .right {
     width: 20%;
-    
+
 }
 
 #logo {
-    float:right;
+    float: right;
     width: 200px;
     height: auto;
     overflow: none;
 }
-@media screen and (max-width:991px){
-    #logo{
+
+@media screen and (max-width:991px) {
+    #logo {
         display: none;
     }
 }
@@ -78,7 +81,7 @@
     cursor: pointer;
     box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    
+
 }
 
 .dropdown-romane-conti a {
@@ -103,8 +106,11 @@
     text-decoration: underline;
 }
 
-@media  screen and (max-width: 767px) {
-    .topnav a, .dropbtn,.dropdown-romane-conti a {
+@media screen and (max-width: 767px) {
+
+    .topnav a,
+    .dropbtn,
+    .dropdown-romane-conti a {
         font-size: 70%;
         padding: 15px 50px;
     }
@@ -140,8 +146,9 @@
     transition-duration: 0.9s;
     transform: scale(1.0);
 }
-@media  screen and (max-width: 991px){
-    #tag{
+
+@media screen and (max-width: 991px) {
+    #tag {
         height: 512px;
         display: block;
         overflow: hidden;
@@ -158,7 +165,7 @@
     top: 42%;
     left: 25%;
     right: 25%;
-  }
+}
 
 .ov_bottom {
     color: white;
@@ -186,9 +193,10 @@
     opacity: 1;
     transform: scale(1.2);
     overflow: hidden;
-    transition-duration: 0,7s;
+    transition-duration: 0, 7s;
 }
-.cont:hover .linkpic{
+
+.cont:hover .linkpic {
     transform: scale(1.2);
     transition-duration: 0.7s;
     overflow: hidden;
@@ -201,7 +209,7 @@
 }
 
 /*Footer*/
-.footer{
+.footer {
     padding-top: 30px;
     padding: 20px;
     text-align: left;
@@ -210,24 +218,28 @@
     color: white;
     margin: none;
     bottom: 0;
-  }
+}
 
 .footer a {
     color: white;
     text-decoration: none;
     cursor: pointer;
 }
+
 .f-ul a:hover {
     text-decoration: underline;
 }
+
 .f-ul {
     list-style: none;
 }
+
 .footer-title {
     font-size: 150%;
     color: white;
     font-variant: small-caps;
 }
+
 .f-ikon {
     width: 40px;
     height: auto;
@@ -242,12 +254,21 @@
     text-align: center;
     font-size: 300%;
 }
+
 .t2 {
     text-align: justify;
     text-indent: 3%;
     margin: 1.5% 15% 3% 15%;
     font-size: 120%;
 }
+
+.t3 {
+    text-align: justify;
+    text-indent: 3%;
+    margin: 1.5% 15% 15% 15%;
+    font-size: 120%;
+}
+
 .d1 {
     margin: none;
     background-color: rgb(7, 7, 80);
@@ -255,53 +276,86 @@
     place-items: center;
     color: white;
 }
+
 .d2 {
     display: grid;
     place-items: center;
     color: white;
+    background-color: rgb(20, 20, 20);
+    margin: none;
+    padding: 10px;
+}
+
+.fc-flex {
+    display: flex;
+    margin-left: 10%;
+}
+
+.fc-flex-cont {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+@media screen and (max-width:991px) {
+    .fc-flex-cont {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .flip-card {
     background-color: transparent;
     width: 300px;
     height: 300px;
-    perspective: 1000px;
     border-radius: 8px;
+    padding: 20px;
+    perspective: 600px;
 }
-  
+
 .flip-card-cont {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 1.3s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-  
+
 .flip-card:hover .flip-card-cont {
     transform: rotateY(180deg);
 }
-  
-.fc-front, .fc-back{
+
+.fc-front,
+.fc-back {
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-  
+
 .fc-front {
     background-color: rgb(7, 7, 80);
     color: white;
+    font-size: 120%;
 }
-  
+
 .fc-back {
     background-color: rgb(7, 7, 80);
     color: white;
     transform: rotateY(180deg);
 }
 
+.fc-img {
+    width: 260px;
+    height: 260px;
+    border-radius: 8px;
+}
 
 /*Minden más*/
 .bc {
@@ -319,7 +373,7 @@
     outline: none;
     background-color: rgb(7, 7, 80);
     color: white;
-    padding:5px 25px;
+    padding: 5px 25px;
     border-radius: 60px;
 }
 
@@ -330,17 +384,18 @@
 
 
 /*Lol be like hee hee*/
-.lolcím{
-font-size: 40px;
-text-align: center; 
+.lolcím {
+    font-size: 40px;
+    text-align: center;
 }
 
-.lol-közép{
+.lol-közép {
     display: grid;
     place-items: center;
     text-align: center;
 }
-.lol-body-div{
+
+.lol-body-div {
     margin: 10px;
     padding: 30px;
 }
