--- a/sybi_general.css
+++ b/sybi_general.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 80%;
+    width:80%;
 }
 
 .cent {
@@ -288,23 +288,16 @@
 
 .fc-flex {
     display: flex;
-    margin-left: 10%;
+    width: 90%;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
 }
 
 .fc-flex-cont {
-    width: 25%;
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-
-@media screen and (max-width:991px) {
-    .fc-flex-cont {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
 }
 
 .flip-card {
