--- a/minenhandwerk.css
+++ b/minenhandwerk.css
@@ -25,8 +25,16 @@ h2{
 .img{
     border-radius: 20px;
     border: solid 2px black;
-    max-width: 100%;
+    width: 100%;
     height: 250px;
+}
+
+.img3{
+    border-radius: 20px;
+    border: solid 2px black;
+    width: 60%;
+    height: 250px;
+    margin: auto;
 }
 
 
@@ -52,5 +60,21 @@ figure img {
     vertical-align: top;
 }
 figure figcaption {
+    text-align: center;
+}
+
+p{
+    text-align: center;
+}
+
+h1{
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+}
+
+.container{
     text-align: center;
 }
