--- a/minenhandwerk.css
+++ b/minenhandwerk.css
@@ -46,6 +46,21 @@ h2{
     border: solid 2px black;
 }
 
+.img4{
+    width: 500px;
+    height: 200px;
+    border-radius: 20px;
+    border: solid 2px black;
+}
+
+.img5{
+    border-radius: 20px;
+    border: solid 2px black;
+}
+
+
+
+
 #body{
     margin-left: 2%;
     margin-right: 2%;
@@ -64,7 +79,7 @@ figure figcaption {
 }
 
 p{
-    text-align: center;
+    font-size: 120%;
 }
 
 h1{
