--- a/grand.css
+++ b/grand.css
@@ -95,14 +95,39 @@ h3{
     font-weight: bold;
 }
 .SZÉK{
+    margin-left: 480px;
+    border: 10px black;
+    border-radius: 15px;
+    width: 40%;
+    height: auto;
+}
+.TávAutó{
     margin-left: 450px;
+    width: 45%;
+    height: auto; 
     border: 10px black;
     border-radius: 15px;
 }
-.TávAutó{
-    margin-left: 400px;
-    width: 100%;
-    height: 450px auto; 
+.Kávézó{
+    margin-left: 450px;
+    width: 45%;
+    height: auto;
     border: 10px black;
     border-radius: 15px;
+}
+.Galéria{
+    width: 500px;
+    height: auto;
+    background-size: cover;
+    margin-left: 10px;
+    padding: 4px;
+}
+.Galéria2{
+    width: 48;
+    height: 300px;
+    margin-left: 10px;
+}
+.Galéria3{
+    height: auto;
+    width: 450px;
 }
