--- a/grand.css
+++ b/grand.css
@@ -122,12 +122,7 @@ h3{
     margin-left: 10px;
     padding: 4px;
 }
-.Galéria2{
-    width: 48;
-    height: 300px;
-    margin-left: 10px;
-}
-.Galéria3{
-    height: auto;
-    width: 450px;
+.közép{
+    display: grid;
+    place-items: center;
 }
