--- a/sybi_general.css
+++ b/sybi_general.css
@@ -372,8 +372,12 @@
 }
 
 .dis-a {
-    text-decoration: underline;
+    text-decoration: none;
     color: white;
+}
+
+.dis-a:hover {
+    text-decoration: underline;
 }
 
 .stealth-a {
